--- a/views/index.jade
+++ b/views/index.jade
@@ -18,3 +18,6 @@ block content
         input(type="text", name="port")
     div.actions
         input(type="submit", value="join peer")
+  form(action="stabilize", method="POST")
+    div.input
+        input(type="submit", value="STABILIZE")
