--- a/views/index.jade
+++ b/views/index.jade
@@ -27,4 +27,5 @@ block content
         input(type="text", name="id")
     div.input
         input(type="submit", value="SEARCH")
+  a(href="leave") Leave Chord Ring
   a(href="http://#{searchResult.ip}:#{searchResult.port}") #{searchResult.id}
