added fix_fingers function

--- a/views/index.jade
+++ b/views/index.jade
@@ -34,6 +34,9 @@ block content
   .stabilize
       input(type="submit" value="stabilize" id="stabilize")
 
+  .fixfingers
+      input(type="submit" value="fixfingers" id="fixfingers")
+
   .findID
     form(id="findID")
       .inputId
